--- a/app/src/main/res/layout/activity_measurement.xml
+++ b/app/src/main/res/layout/activity_measurement.xml
@@ -90,6 +90,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView_button"
                     app:layout_constraintVertical_bias="0.0"
+                    android:max="100"
                     tools:progress="60" />
 
                 <ImageView
@@ -101,7 +102,7 @@
                     app:layout_constraintEnd_toEndOf="@+id/progress_bar"
                     app:layout_constraintStart_toStartOf="@+id/progress_bar"
                     app:layout_constraintTop_toTopOf="@+id/progress_bar"
-                    />
+                    android:contentDescription="@string/todo" />
             </androidx.constraintlayout.widget.ConstraintLayout>
             <TextView
                 android:id="@+id/textViewhold"
@@ -154,6 +155,7 @@
                         android:fontFamily="@font/archivo_black"
                         android:padding="1dp"
                         android:text="128"
+                        android:gravity="center"
                         android:textColor="#C80606"
                         android:textSize="40sp" />
 
@@ -243,7 +245,7 @@
                             android:textSize="18sp" />
 
                         <EditText
-                            android:id="@+id/patient_age"
+                            android:id="@+id/edit_patient_age"
                             android:layout_width="50dp"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="1dp"
@@ -272,11 +274,11 @@
                             android:textStyle="normal|italic" />
 
                         <TextView
-                            android:id="@+id/time_date"
+                            android:id="@+id/textview_time_date"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="5dp"
-                            android:text="31/01/2023 11:11:11"
+                            android:text="..."
                             android:textColor="#684444"
                             android:textSize="17sp"
                             android:textStyle="normal|italic" />
